# agent_orchestrator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PLAN.md  README.md  SETUP.md  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  requirements.txt  setup.bat  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
agents/: __init__.py  backend.py  delegation.py  frontend.py  orchestrator.py  roles.py  testing.py  tools.py
api/: __init__.py  server.py
cli/: __init__.py  interface.py
config/: prompts.py  settings.py  task_templates.py
core/: __init__.py  audit_logger.py  cost_tracker.py  database.py  dry_run.py  error_handler.py  git_manager.py  llm_providers.py  performance_tracker.py  plugin_manager.py  project_context.py  project_manager.py  rate_limiter.py  skill_watcher.py  state_manager.py  task_router.py  team_io.py  validator.py
dashboard/: index.html
examples/: README.md
examples/cli-tool/: README.md
examples/data-pipeline/: README.md
examples/fastapi-crud/: README.md
logs/: audit_trail.json
remote/: __init__.py  telegram_bot.py
skills/: __init__.py  marketplace_manager.py  registry.py
skills/marketplace/: cli_tools.json  data_engineering.json  fastapi.json
tasks/: __init__.py  definitions.py
tests/: test_config.py  test_database.py  test_delegation.py  test_git_manager.py  test_orchestrator.py  test_roles.py  test_skills.py  test_validator.py
tools/: __init__.py  ask_human.py
