[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "1.0.0"
description = "Multi-Agent Orchestration System for Software Development with Hierarchical Team Management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agent Orchestrator Team", email = "contact@agentorchestrator.com"}
]
keywords = ["ai", "agents", "automation", "telegram", "crewai", "code-generation", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "crewai>=0.30.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "python-telegram-bot>=20.7",
    "GitPython>=3.1.40",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "schedule>=1.2.0",
    "colorama>=0.4.6",
    "tiktoken>=0.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agent-orchestrator = "main:main"
orchestrator = "main:main"

[project.urls]
Homepage = "https://agentorchestrator.com"
Documentation = "https://agentorchestrator.com/docs"
Repository = "https://github.com/agentorchestrator/agent-orchestrator"
"Bug Tracker" = "https://github.com/agentorchestrator/agent-orchestrator/issues"

[tool.setuptools]
packages = ["agents", "api", "cli", "config", "core", "remote", "skills"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
